tests/snapshots/r#mod__stage__stage_added_line.snap
---
source: tests/mod.rs
expression: ctx.redact_buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        " On branch main                                                                 ",
        "                                                                                ",
        " Unstaged changes (1)                                                           ",
        " modified   firstfile                                                           ",
        " @@ -1,3 +1,2 @@                                                                ",
        " -testing                                                                       ",
        " -testtest                                                                      ",
        "🢒 weehooo                                                                       ",
        " +blrergh                                                                       ",
        "                                                                                ",
        " Staged changes (1)                                                             ",
        " modified   firstfile                                                           ",
        " @@ -1,2 +1,3 @@                                                                ",
        "  testing                                                                       ",
        "  testtest                                                                      ",
        " +weehooo                                                                       ",
        "                                                                                ",
        "────────────────────────────────────────────────────────────────────────────────",
        "$ git apply --cached --recount                                                  ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 18, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
